QXGEdit - Qt XG Editor
----------------------

ChangeLog


GIT HEAD

- Introducing cross-platform support via RtMidi. (EXPERIMENTAL)


0.9.11  2023-09-09  An End-of-Summer'23 Release.

- Preppings to next development cycle (Qt >= 6.6)


0.9.10  2023-06-01  A Spring'23 Release.

- Micro-adjustments to the View > Options... dialog layout.

- Prepping into the next development cycle (with Qt >= 6.5).


0.9.9  2023-03-23  An Early-Spring'23 Release.

- Drum Setup is being made possible for any drum-kit, with some
  provided default values, not just for the default Standard Kit
  anymore.


0.9.8  2022-12-28  An End-of-Year'22 Release.

- Just bumping into the next develop cycle/season.


0.9.7  2022-10-03  An Early-Autumn'22 Release.

- Add current system user-name to the singleton/unique application
  instance identifier.

- Fixed the styles plug-ins path resolution on self-container(ized)
  formats eg. AppImage and possibly Flatpak.


0.9.6  2022-04-02  A Spring'22 Release.

- Added missing file code to desktop exec entry.

- Main application icon is now presented in scalable format (SVG).

- Migrated command line parsing to QCommandLineParser/Option
  (Qt >= 5.2)


0.9.5  2022-01-09  A Winter'22 Release.

- Dropped autotools (autoconf, automake, etc.) build system.


0.9.4  2021-07-03  An Early-Summer'21 Release.

- All builds default to Qt6 (Qt >= 6.1) where available.

- CMake is now the official build system.


0.9.3  2021-05-11  A Spring'21 Release.

- All packaging builds switching to CMake.


0.9.2  2021-03-14  An End-of-Winter'21 Release.

- Bumped version micro/dot number into the next develop cycle.


0.9.1  2021-02-07  A Winter'21 Release.

- Fixed Chorus and Variation effect types, when loading from a raw 
  SysEx file (.syx).

- Early preparations for the New Year develop(ment) cycle.


0.9.0  2020-12-17  A Winter'20 Release.

- Early fixing to build for Qt >= 6.0.0 and comply with C++17 
  standard.


0.6.3  2020-07-31  A Summer'20 Release.
