@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2005-2022 Rui Nuno Capela <rncbc@rncbc.org> -->
+<!-- Copyright 2005-2024 Rui Nuno Capela <rncbc@rncbc.org> -->
 <!-- Copyright 2015 Olivier Humbert <trebmuh@tuxfamily.org> for the FR translation--> 
 <component type="desktop">
  <id>org.rncbc.qxgedit</id>
